# tauri-updater

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
src-tauri/: .tauri-private-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: main.css
src/views/: HomeView.vue
