[package]
name = "tauri-updater-demo"
version = "0.1.0"
description = "A Tauri App with Auto Update Demo"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_updater_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
